--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@
 /* inizio header */
 #testata{
     width:100%;
-    background-image: url(../img/pattern.png);
-    background-repeat: repeat;
-    background-size: 300px;
+    background-image: url(../img/pattern.png);    background-size: 300px;
     background-color: rgb(10, 131, 244);
 }
 #testata > img{
@@ -18,29 +16,29 @@
 }
 /* fine header */
 
+
 /* inizio main */
-main{
+main, footer{
     margin-left: 10px;
 }
-.section-style{
-    width:100%;
-}
+
 h1{
     margin-top:30px;
     font-size:50px;
 }
-.scritta-grigia{
-    font-size:15px;
+h2{
     color: grey;
-}
-.scritta-grigia-piccola{
     margin-bottom:20px;
-    font-size: 10px;
 }
+
 #parola_azzurra{
     color:rgb(90, 185, 249);
 }
-.sezione-uno > img{
+#data{
+    font-size: 15px;
+}
+
+.tim{
     width:48%;
     height:450px;
 }
@@ -50,7 +48,8 @@ h1{
 }
 p{
     font-size: 15px;
-    margin-top:20px;
+    margin-top:30px;
+    margin-bottom:30px;
 }
 .fondo-giallo{
     background-color: yellow;
@@ -59,3 +58,42 @@ ul{
     margin-left:30px;
     margin-top:30px;
 }
+
+/* tabella */
+table{
+    width:100%;
+    margin-top:50px;
+    border-spacing: 0;
+}
+thead{
+    background:rgb(7, 158, 251);
+    height:auto;
+    color:white;
+}
+.colonna-stretta{
+    width:25%;
+}
+.colonna-larga{
+    width:45%
+}
+.fondo-azzurro{
+    background-color: rgb(125, 205, 232);
+}
+/* fine tabella */
+/* fine main */
+
+
+/* inizio footer */
+.box1, .box2{
+    width:300px;
+    height:200px;
+    background-image: url(../img/monitor.jpg);
+    background-size: cover;
+    color:white;
+    padding:20px;
+    margin-bottom:20px;
+}
+.box2{
+    background-image: url(../img/graph.jpg);
+}
+/* fine footer */
